rnsc/test_data/rns_integration/error/parser/outside_class_directive/after_class_dir/dot_end.rns
.class public EmptyClass
.super java/lang/Object

.class_end
.method_end ; trailing comment
